--- a/frontend-01/02-html/02-기본속성.html
+++ b/frontend-01/02-html/02-기본속성.html
@@ -15,6 +15,7 @@
   <meta name="twitter:image" content="http://www.mysite.com/article/article1.html">
   <meta name="twitter:domain" content="사이트 명">
   <link rel="stylesheet" href="./CSS/styles.css">
+  <link rel="icon" type="image/x-icon" href="./imgs/favicon.ico">
   <script src="./JS/script.js"></script>
 </head>
 <body>
@@ -66,6 +67,7 @@
         <!-- 상대경로 -->
          <img src="./imgs/ad-img1.jpg" alt="현대해상 다이렉트 이달의 자동차보험 만기가 다가왔어요! 다이렉트로 저렴해진 내 차 보험료 확인하세요! 지금 확인. 손해보험협회 심의필 제 127983호(2024년07월15일부터 2025년07월14일까지)" height="50">
          <img src="/imgs/ad-img1.jpg" alt="현대해상 다이렉트 이달의 자동차보험 만기가 다가왔어요! 다이렉트로 저렴해진 내 차 보험료 확인하세요! 지금 확인. 손해보험협회 심의필 제 127983호(2024년07월15일부터 2025년07월14일까지)" height="50">
+         <hr>
       </div>
   <hr>
   <footer>
