--- a/frontend-01/02-html/02-기본속성.html
+++ b/frontend-01/02-html/02-기본속성.html
@@ -61,11 +61,13 @@
         <hr>
         <!-- img : 이미지태그 -->
         <!-- 이미지를 추가할 때 사용하는 태그이다 -->
-        <!-- 운영성 이미지만 / 디자인태그는 CSS로 -->
+        <!-- 운영성 이미지만 - 뉴스 기사, 배너 등 (F5를 눌렀을 때 변경이 될 때)/ 디자인태그는 CSS로 -->
         <!-- 절대경로 -->
         <img src="https://ssl.pstatic.net/melona/libs/1512/1512610/ef58ee293edf6d6e06f8_20240930120338496.jpg" alt="현대해상 연간 주행거리(마일리지특약 가입시) 15,000km 이하라면? 다이렉트로 저렴해진 내 차 보험료 확인해보세요! 다이렉트 보험료 확인 손해보험협회 심의필 제129950호(2024년08월06일부터 2025년08월05일까지)" height="50">
         <!-- 상대경로 -->
+         <!-- 로컬 경로 -->
          <img src="./imgs/ad-img1.jpg" alt="현대해상 다이렉트 이달의 자동차보험 만기가 다가왔어요! 다이렉트로 저렴해진 내 차 보험료 확인하세요! 지금 확인. 손해보험협회 심의필 제 127983호(2024년07월15일부터 2025년07월14일까지)" height="50">
+         <!-- 서버 경로 -->
          <img src="/imgs/ad-img1.jpg" alt="현대해상 다이렉트 이달의 자동차보험 만기가 다가왔어요! 다이렉트로 저렴해진 내 차 보험료 확인하세요! 지금 확인. 손해보험협회 심의필 제 127983호(2024년07월15일부터 2025년07월14일까지)" height="50">
          <hr>
       </div>
