--- a/frontend-01/02-html/01-기본설정.html
+++ b/frontend-01/02-html/01-기본설정.html
@@ -15,6 +15,7 @@
     <meta name="twitter:description" content="페이지 설명">
     <meta name="twitter:image" content="http://www.mysite.com/article/article1.html">
     <meta name="twitter:domain" content="사이트 명">
+    <link rel="icon" type="image/x-icon" href="./imgs/favicon.ico">
     <link rel="stylesheet" href="./CSS/styles.css">
     <script src="./JS/script.js"></script>
   </head>
@@ -25,7 +26,41 @@
         <h1 class="logo">
           <a href="/">logo</a>
         </h1>
-        <nav>gnb</nav>
+        <nav>
+          <ul>
+            <li>
+              <a href="#">menu1</a>
+              <ul>
+                <li>
+                  <a href="#">menu 1-1</a>
+                    <ul>
+                      <li><a href="#">menu 1-1-1</a></li>
+                      <li><a href="#">menu 1-1-2</a></li>
+                      <li><a href="#">menu 1-1-3</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">menu 1-2</a></li>
+                <li><a href="#">menu 1-3</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">menu2</a>
+              <ul>
+                <li><a href="#">menu 2-1</a></li>
+                <li><a href="#">menu 2-2</a></li>
+                <li><a href="#">menu 2-3</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">menu3</a>
+              <ul>
+                <li><a href="#">menu 3-1</a></li>
+                <li><a href="#">menu 3-2</a></li>
+                <li><a href="#">menu 3-3</a></li>
+              </ul>
+            </li>
+          </ul>
+        </nav>
       </header>
       <main id="container">
         <div class="content">
