--- a/frontend-01/02-html/06-form.html
+++ b/frontend-01/02-html/06-form.html
@@ -38,7 +38,7 @@
       <input type="email" id="email" name="email" autofocus>
       <hr>
       <label for="tel">전화번호:</label>
-      <input type="tel" name="tel" id="title" value="010-1234-5678" pattern="[0-9]{3}-[0-9]{4}-[0-9]{4}">
+      <input type="tel" name="tel" id="tel" value="010-1234-5678" pattern="[0-9]{3}-[0-9]{4}-[0-9]{4}">
       <hr>
       <label for="color">좋아하는 색</label>
       <select name="color" id="color">
