--- a/frontend-01/03-CSS/01-선택자.html
+++ b/frontend-01/03-CSS/01-선택자.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="./CSS/01-선택자.css">
   <link rel="icon" type="image/x-icon" href="./imgs/favicon.ico">
   <script src="./JS/script.js"></script>
+  <link rel= "stylesheet" href= "https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" >
 </head>
 </head>
 <body>
@@ -34,7 +35,7 @@
       <p>손자</p>
     </section>
   </div>
-  <hr>
+  <br>
   <!-- 실무(참고용) -->
   <div class="sel2">
     <p class="child-g child">자식</p>
@@ -64,5 +65,36 @@
     <li>메뉴3<span>|</span></li>
     <li>메뉴4<span>|</span></li>
   </ul>
+  <hr>
+  <!-- 가상 선택자 ::before, ::after -->
+  <ul class="list2">
+    <li>메뉴1</li>
+    <li>메뉴2</li>
+    <li>메뉴3</li>
+    <li>메뉴4</li>
+  </ul>
+  <br>
+  <ul class="list3">
+    <li>메뉴1</li>
+    <li>메뉴2</li>
+    <li>메뉴3</li>
+  </ul>
+  <br>
+  <ul class="list4">
+    <li>메뉴1</li>
+    <li>메뉴2</li>
+    <li>메뉴3</li>
+    <li>메뉴4</li>
+  </ul>
+  <br>
+  <input type="checkbox" name="check1" id="check1" checked>
+  <label class="label" for="check1">이용약관</label>
+  <input type="checkbox" name="check2" id="check2">
+  <label class="label" for="check2">개인정보처리방침</label>
+  <hr>
+  <!-- 속성 선택자 [] -->
+  <a href="#">링크1</a>
+  <a href="#" target="_blank">링크2</a>
+  <a href="#" target="_top">링크3</a>
 </body>
 </html>
