--- a/frontend-01/03-CSS/05-font.html
+++ b/frontend-01/03-CSS/05-font.html
@@ -42,6 +42,9 @@
   </ul>
   <hr>
   <!-- vw : viewport 기준 -->
-   <p class="text4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, harum. Molestiae quos similique aut vitae. Suscipit sequi vitae quod, atque molestiae harum? Unde id, natus minus esse eos dicta incidunt.</p>
+  <p class="text4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, harum. Molestiae quos similique aut vitae. Suscipit sequi vitae quod, atque molestiae harum? Unde id, natus minus esse eos dicta incidunt.</p>
+  <hr>
+  <!-- font 속기 -->
+  <p class="text5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia consequatur iusto neque quia, expedita ipsam placeat tempora voluptatem doloribus soluta illo pariatur dicta accusantium omnis ducimus deserunt explicabo nam libero.</p>
 </body>
 </html>
