--- a/frontend-01/03-CSS/04-text.html
+++ b/frontend-01/03-CSS/04-text.html
@@ -18,7 +18,6 @@
   <link rel= "stylesheet" href= "https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" >
   <link rel="icon" type="image/x-icon" href="./imgs/favicon.ico">
   <script src="./JS/script.js"></script>
-
 </head>
 <body>
   <h1>CSS</h1>
@@ -34,5 +33,17 @@
   <button>
     <span class="blind">회원가입</span>
   </button>
+  <hr>
+  <div class="v">수직쓰기 모드</div>
+  <hr>
+  <div class="box1">
+    box size는 너비/높이+padding+테두리 입니다. 이 box는 너비 300px에 높이 100px이고 padding은 50px이기 때문에 총 너비는 400px, 높이는 200px 입니다.
+  </div>
+  <div class="box2">
+    box size는 너비/높이+padding+테두리 입니다. padding이 사라지면 크기가 300px, 100px이 됩니다.
+  </div>
+  <div class="box3">
+    이때 첫번째 박스 코드에 box-sizing 을 추가해주면 패딩과 테두리가 너비와 높이에 포함됩니다. 이 박스 크기는 패딩이 있어도 300px, 100px입니다.
+  </div>
 </body>
 </html>
