--- a/frontend-01/03-CSS/07-layout.html
+++ b/frontend-01/03-CSS/07-layout.html
@@ -21,6 +21,20 @@
 <body>
     <h1>CSS</h1>
     <h2>Layout</h2>
+    <!-- flex -->
+     <div class="flex-container">
+        <div class="flex1">1</div>
+        <div class="flex2">2</div>
+        <div class="flex3">3</div>
+     </div>
+     <hr>
+    <!-- column -->
+    <div class="column1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, possimus, voluptas vel incidunt dolor reprehenderit facere tempora optio exercitationem iusto, ea deleniti similique. Ullam nobis dicta quae provident pariatur laboriosam?</div>
+    <div class="column2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi ad explicabo itaque tempore necessitatibus, illum doloribus nostrum voluptates eum ipsum adipisci, error tempora? Alias cum iure aperiam rem officiis reiciendis.</div>
+    <hr>
+    <!-- 완벽한 센터링 -->
+     <div class="center1">     <div class="center2"></div>
+    </div>
     <!-- inline -->
     <div class="inline">
         inline은 이렇게
@@ -71,6 +85,9 @@
     </div>
     <div class="scroll">
         이 div요소는 scroll 축 처진 그 어깨에 슬프다 써져 있길래 조심스레 괜찮냐 물어도 대답은 침묵뿐이에요 힘이 되고 싶어, 뭔 짓을 해 봐도 안 보이나 봐요, 눈앞에 있는데도 서서히 금이 가 깨질 것 같지만 그래도 난 버티고 있었죠 이번만큼은 예상이 빗나가길 그리도 간절히 원했는데 왜? 그냥 가라는 말 그대의 한마디가 나를 뚫고 지나가요 더 이상은 걷잡을 수 없이 널 향한 맘 작은 조각들로 부서지고 흩어져요 여기가 내 사랑의 끝이네요 So I guess now I've got to go 이렇게 떠나도 그대는 달라질 거 하나 없죠 Oh, so I guess now there's no more us 그대가 필요한 건 내가 아닌 거니까 그대가 미워, 떠나려 해 봐도 안되더라고요 눈앞에 있으니까 서서히 금이 가 깨질 걸 알아도 그래도 난 버티고 있었죠 이번만큼은 예상이 빗나가길 그리도 간절히 원했는데 왜? 그냥 가라는 말 그대의 한마디가 나를 뚫고 지나가요 더 이상은 걷잡을 수 없이 널 향한 맘 작은 조각들로 부서지고 흩어져요 여기가 내 사랑의 끝이네요 난 무너져 내리고 있는 이 순간에도 No, it's not easy to leave for good 그냥 가라는 말 그대의 한마디가 나를 뚫고 지나가요 더 이상은 걷잡을 수 없이 널 향한 맘 작은 조각들로 부서지고 흩어져요 여기가 내 사랑의 끝이네요 So I guess now I've got to go 이렇게 떠나도 그대는 달라질 거 하나 없죠 Oh, so I guess now there's no more us 그대가 필요한 건 내가 아닌 거니까
+    </div>
+    <div class="etc">
+        이 div요소는 긴 글이 ...으로 표시 됩니다 君とのラブストーリー それは予想通り いざ始まればひとり芝居だ ずっとそばにいたって 結局ただの観客だ 感情のないアイムソーリー それはいつも通り 慣れてしまえば悪くはないけど 君とのロマンスは人生柄 続きはしないことを知った もっと違う設定で もっと違う関係で 出会える世界線 選べたらよかった もっと違う性格で もっと違う価値観で 愛を伝えられたらいいな そう願っても無駄だから
     </div>
     <hr>
     <!-- float -->
