--- a/frontend-01/03-CSS/10-img.html
+++ b/frontend-01/03-CSS/10-img.html
@@ -1,35 +1,40 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>배경 | CSS</title>
+  <title>Img | CSS</title>
   <meta property="og:type" content="website">
   <meta property="og:title" content="페이지 제목">
   <meta property="og:description" content="페이지 설명">
   <meta property="og:image" content="http://www.mysite.com/article/article1_featured_image.jpg">
   <meta property="og:url" content="http://www.mysite.com/article/article1.html">
-  <meta name="twitter:card" content="summary">
+  <meta name="twitter:card" content="summary">    
   <meta name="twitter:title" content="페이지 제목">
   <meta name="twitter:description" content="페이지 설명">
   <meta name="twitter:image" content="http://www.mysite.com/article/article1.html">
   <meta name="twitter:domain" content="사이트 명">
-  <link rel="stylesheet" href="./CSS/02-배경.css">
+  <link rel="stylesheet" href="./CSS/10-img.css">
   <link rel="icon" type="image/x-icon" href="./imgs/favicon.ico">
   <script src="./JS/script.js"></script>
 </head>
-<body style="height: 300vh;">
+<body>
   <h1>CSS</h1>
-  <h2>배경</h2>
-  <!-- background color -->
-  <div class="box1">box1</div>
-  <br>
-  <div class="box2">box2</div>
-  <div class="box3">box3</div>
-  <!-- gradient -->
-  <div class="box4">box4</div>
-  <div class="box5">box5</div>
-  <div class="box6">box6</div>
-
+  <h2>img</h2>
+  <!-- img sprite -->
+  <div class="img1"></div>
+  <div class="img2">
+    <img src="./imgs/img3.jpg" alt="" class="img2">
+  </div>
+  <!-- overlay -->
+  <div class="overlay1">
+    <div class="bg1">
+      <div class="text1">overlay1</div>
+    </div>
+  </div>
+  <!-- mask -->
+  <div class="mask1">
+    <img src="./imgs/img4.jfif" alt="mask" class="maskIn">
+  </div>
 </body>
 </html>
