--- a/frontend-01/03-CSS/12-ui.html
+++ b/frontend-01/03-CSS/12-ui.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>배경 | CSS</title>
+  <title>UI | CSS</title>
   <meta property="og:type" content="website">
   <meta property="og:title" content="페이지 제목">
   <meta property="og:description" content="페이지 설명">
@@ -14,22 +14,13 @@
   <meta name="twitter:description" content="페이지 설명">
   <meta name="twitter:image" content="http://www.mysite.com/article/article1.html">
   <meta name="twitter:domain" content="사이트 명">
-  <link rel="stylesheet" href="./CSS/02-배경.css">
+  <link rel="stylesheet" href="./CSS/12-ui.css">
   <link rel="icon" type="image/x-icon" href="./imgs/favicon.ico">
   <script src="./JS/script.js"></script>
 </head>
-<body style="height: 300vh;">
+<body>
   <h1>CSS</h1>
-  <h2>배경</h2>
-  <!-- background color -->
-  <div class="box1">box1</div>
-  <br>
-  <div class="box2">box2</div>
-  <div class="box3">box3</div>
-  <!-- gradient -->
-  <div class="box4">box4</div>
-  <div class="box5">box5</div>
-  <div class="box6">box6</div>
-
+  <h2>UI</h2>
+  <div class="resize">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quidem enim molestias exercitationem. Recusandae, impedit illum quisquam iusto, ipsam sequi molestiae fugit consectetur autem, dignissimos dicta debitis eos quidem voluptates.</div>
 </body>
 </html>
