--- a/frontend-01/03-CSS/09-math.html
+++ b/frontend-01/03-CSS/09-math.html
@@ -1,35 +1,34 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>배경 | CSS</title>
+  <title>math | CSS</title>
   <meta property="og:type" content="website">
   <meta property="og:title" content="페이지 제목">
   <meta property="og:description" content="페이지 설명">
   <meta property="og:image" content="http://www.mysite.com/article/article1_featured_image.jpg">
   <meta property="og:url" content="http://www.mysite.com/article/article1.html">
-  <meta name="twitter:card" content="summary">
+  <meta name="twitter:card" content="summary">    
   <meta name="twitter:title" content="페이지 제목">
   <meta name="twitter:description" content="페이지 설명">
   <meta name="twitter:image" content="http://www.mysite.com/article/article1.html">
   <meta name="twitter:domain" content="사이트 명">
-  <link rel="stylesheet" href="./CSS/02-배경.css">
+  <link rel="stylesheet" href="./CSS/09-math.css">
   <link rel="icon" type="image/x-icon" href="./imgs/favicon.ico">
   <script src="./JS/script.js"></script>
 </head>
-<body style="height: 300vh;">
+<body>
   <h1>CSS</h1>
-  <h2>배경</h2>
-  <!-- background color -->
-  <div class="box1">box1</div>
-  <br>
-  <div class="box2">box2</div>
-  <div class="box3">box3</div>
-  <!-- gradient -->
-  <div class="box4">box4</div>
-  <div class="box5">box5</div>
-  <div class="box6">box6</div>
-
+  <h2>math</h2>
+  <div class="math">
+    이 상자는 width가 view의 100%보다 300px 작습니다.
+  </div>
+  <div class="math2">
+    이 상자는 width가 50% 또는 500px 입니다. 둘 중 큰 값을 사용합니다.
+  </div>
+  <div class="math3">
+    이 상자는 width가 70% 또는 1200px 입니다. 둘 중 작은 값을 사용합니다.
+  </div>
 </body>
 </html>
