--- a/frontend-01/03-CSS/07-layout.html
+++ b/frontend-01/03-CSS/07-layout.html
@@ -22,12 +22,43 @@
     <h1>CSS</h1>
     <h2>Layout</h2>
     <!-- flex -->
-     <div class="flex-container">
-        <div class="flex1">1</div>
-        <div class="flex2">2</div>
-        <div class="flex3">3</div>
-     </div>
-     <hr>
+    <div class="flex1">
+       <div class="flex">flex-direction is column</div>
+       <div class="flex">justify-content is center</div>
+       <div class="flex">aligin items is center</div>
+    </div>
+    <div class="flex2">
+       <div class="flex">flex-direction is column</div>
+       <div class="flex">2</div>
+       <div class="flex">aligin items is flex-end</div>
+    </div>
+    <div class="flex3">
+       <div class="flex">justify is space-between </div>
+       <div class="flex">2</div>
+       <div class="flex">3</div>
+    </div>
+    <div class="flex4">
+       <div class="flex1-2">justify is space-around </div>
+       <div class="flex1-2">2</div>
+       <div class="flex1-2">3</div>
+    </div>
+    <div class="flex5">
+       <div class="flex1-2">justify is space-evenly </div>
+       <div class="flex1-2">2</div>
+       <div class="flex1-2">3</div>
+    </div>
+    <div class="flex6">
+        <div class="flexinher1">1</div>
+        <div class="flexinher2">2</div>
+        <div class="flexinher3">3</div>
+    </div>
+    <div class="flex7">
+        <div class="flexinher4">1</div>
+        <div class="flexinher5">2</div>
+        <div class="flexinher6">3</div>
+        <div class="flexinher7">4</div>
+    </div>
+    <hr>
     <!-- column -->
     <div class="column1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, possimus, voluptas vel incidunt dolor reprehenderit facere tempora optio exercitationem iusto, ea deleniti similique. Ullam nobis dicta quae provident pariatur laboriosam?</div>
     <div class="column2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi ad explicabo itaque tempore necessitatibus, illum doloribus nostrum voluptates eum ipsum adipisci, error tempora? Alias cum iure aperiam rem officiis reiciendis.</div>
