--- a/frontend-01/03-CSS/14-mq.html
+++ b/frontend-01/03-CSS/14-mq.html
@@ -44,5 +44,10 @@
   <div class="mq2">
     <div class="bg2"></div>
   </div>
+  <div class="mq3">
+    <div class="img1"></div>
+    <div class="img2"></div>
+    <div class="img3"></div>
+  </div>
 </body>
 </html>
