--- a/frontend-01/03-CSS/15-rwd.html
+++ b/frontend-01/03-CSS/15-rwd.html
@@ -17,9 +17,31 @@
     <link rel="stylesheet" href="./CSS/15-rwd.css">
     <link rel= "stylesheet" href= "https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" >
     <link rel="icon" type="image/x-icon" href="./imgs/favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
     <script src="./JS/script.js"></script>
 </head>
 <body>
-    
+    <div class="wrap">
+        <header id="header">
+            <h1>logo</h1>
+            <nav id="nav">
+                <ul>
+                    <li>menu1</li>
+                    <li>menu2</li>
+                    <li>menu3</li>
+                </ul>
+            </nav>
+        </header>
+        <main id="main">
+            <div class="row">
+                <div class="col-3">
+                    test
+                 </div>
+                <div class="col-9"> </div>
+            </div>
+        </main>
+    </div>
 </body>
 </html>
